--- a/tiklab-xpack-starter/src/main/resources/application.yaml
+++ b/tiklab-xpack-starter/src/main/resources/application.yaml
@@ -14,9 +14,9 @@ server:
 
 #dal config for mysql jdbc
 jdbc:
-  driverClassName: com.mysql.cj.jdbc.Driver
-  url: jdbc:mysql://172.12.1.16:3306/tiklab_xpack?characterEncoding=utf8&useSSL=false&serverTimezone=UTC
-  username: root
+  driverClassName: org.postgresql.Driver
+  url: jdbc:mysql://172.12.1.16:5432/tiklab_xpack?stringtype=unspecified
+  username: postgres
   password: darth2020
 
 DATA_HOME: ${user.home}/tiklab/${app.name}
