制品库地址调整

--- a/tiklab-xpack-starter/src/main/resources/config/test/application.yaml
+++ b/tiklab-xpack-starter/src/main/resources/config/test/application.yaml
@@ -96,4 +96,4 @@ template:
 repository:
   library: ${user.home}
   code: xpack
-  address: "http://xpack-ce.test.tiklab.net"
+  address: "http://bac.xpack.test.tiklab.net"
