--- a/tiklab-xpack-starter/src/main/resources/config/test/application.yaml
+++ b/tiklab-xpack-starter/src/main/resources/config/test/application.yaml
@@ -93,6 +93,10 @@ template:
   shell:
     path: ${APP_HOME}/script/create_db_local_02.sh
 
+#file
+file:
+  path: http://file.dev.tiklab.net
+
 repository:
   library: ${user.home}
   code: xpack
