--- a/tiklab-xpack-starter/src/main/resources/config/demo/application.yaml
+++ b/tiklab-xpack-starter/src/main/resources/config/demo/application.yaml
@@ -4,46 +4,41 @@ app:
   path: ${APP_HOME}
 spring:
   profiles:
-    active: dev
+    active: demo
 
 #web config
 server:
-  port: 8083
+  port: 8080
 
 #dal config
 
 #dal config for mysql jdbc
 jdbc:
   driverClassName: org.postgresql.Driver
-  url: jdbc:postgresql://172.10.1.10:5432/tiklab_xpack?currentSchema=public&stringtype=unspecified
+  url: jdbc:postgresql://172.12.1.10:5432/tiklab_xpack?stringtype=unspecified
   username: postgres
   password: darth2020
 
 DATA_HOME: ${user.home}/tiklab/${app.name}
 
-
-
-
-#eas config
 eas:
   embbed:
     enable: true
+
 base:
-  url: http://192.168.10.23:3000
-
-
+  url: http://bac.eas.demo.tiklab.net
 #dfs config
 #dfs.server.enabled=false
 dfs:
   client:
-    url: 172.10.1.11:4000
+    url: 172.11.1.17:4000
     bucket: ${app.name}
 
 #dcs server config
 
 dcs:
   client:
-    url: 172.10.1.11:5000
+    url: 172.11.1.17:5000
     bucket: ${app.name}
 
 #dss config
@@ -51,7 +46,7 @@ dcs:
 
 dss:
   client:
-    url: 172.10.1.11:6000
+    url: 172.11.1.17:6000
     bucket: ${app.name}
 
 #plugin config
@@ -59,11 +54,11 @@ plugin.path: ${APP_HOME}/plugin
 
 #rpc
 ocs:
-  address: http://192.168.10.7:8080
+  address: http://172.11.1.11:8080
 
 
 homes:
-  address: http://192.168.10.7:8080
+  address: http://172.11.1.11:8080
   return:
     path: ''
 
@@ -71,14 +66,21 @@ homes:
 licences:
   path: ${DATA_HOME}/data/dfs/default
 
+db:
+  path: 127.0.0.1:3306
+  shell:
+    path: ${APP_HOME}/script/create_db_local_02.sh
+
+
+template:
+  shell:
+    path: ${APP_HOME}/script/create_db_local_02.sh
+
 #file
 file:
   path: http://file.dev.tiklab.net
+
 repository:
-  library: /Users/limingliang/publicData
+  library: ${user.home}
   code: xpack
-  address: "http://192.168.10.7:8083"
-
-
-
-
+  address: "http://bac.xpack.demo.tiklab.net"
