--- a/tiklab-xpack-starter/src/main/resources/application.yaml
+++ b/tiklab-xpack-starter/src/main/resources/application.yaml
@@ -19,6 +19,13 @@ jdbc:
   username: postgres
   password: darth2020
 
+
+postgresql:
+  embbed:
+    enable: true
+  database: tiklab_xpack
+
+
 DATA_HOME: ${user.home}/tiklab/${app.name}
 
 #dfs config
