路径配置修改

--- a/tiklab-xpack-starter/src/main/resources/config/demo/application.yaml
+++ b/tiklab-xpack-starter/src/main/resources/config/demo/application.yaml
@@ -24,10 +24,10 @@ DATA_HOME: ${user.home}/tiklab/${app.name}
 eas:
   embbed:
     enable: false
-  address: http://bac.eas.demo.tiklab.net
+  address: http://eas-ce.demo.tiklab.net
 
 base:
-  url: http://bac.eas.demo.tiklab.net
+  url: http://eas-ce.demo.tiklab.net
 #dfs config
 #dfs.server.enabled=false
 dfs:
@@ -54,14 +54,8 @@ dss:
 plugin.path: ${APP_HOME}/plugin
 
 #rpc
-ocs:
-  address: http://172.11.1.11:8080
-
-
 homes:
   address: http://172.11.1.11:8080
-  return:
-    path: ''
 
 #licences config
 licences:
@@ -84,4 +78,4 @@ file:
 repository:
   library: ${user.home}
   code: xpack
-  address: "http://bac.xpack.demo.tiklab.net"
+  address: "http://xpack-ce.demo.tiklab.net"
