--- a/tiklab-xpack-starter/src/main/resources/config/test/application.yaml
+++ b/tiklab-xpack-starter/src/main/resources/config/test/application.yaml
@@ -24,6 +24,8 @@ postgresql:
   embbed:
     enable: true
   database: tiklab_xpack
+  server:
+    port: 5010
 
 DATA_HOME: ${user.home}/tiklab/${app.name}
 
