--- a/tiklab-xpack-starter/pom.xml
+++ b/tiklab-xpack-starter/pom.xml
@@ -390,6 +390,31 @@
                 </executions>
             </plugin>
 
+          <!--  &lt;!&ndash;copy插件&ndash;&gt;
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>2.8</version>
+                <executions>
+                    <execution>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>copy</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <artifactItems>
+                        <artifactItem>
+                            <groupId>io.tiklab</groupId>
+                            <artifactId>tiklab-user-plugin-all</artifactId>
+                            <version>${project.version}</version>
+                        </artifactItem>
+                    </artifactItems>
+                    <includeTypes>jar</includeTypes>
+                    <outputDirectory>${project.basedir}/plugin</outputDirectory>
+                </configuration>
+            </plugin>-->
         </plugins>
     </build>
 
