--- a/tiklab-xpack-starter/src/main/resources/application.yaml
+++ b/tiklab-xpack-starter/src/main/resources/application.yaml
@@ -1,7 +1,7 @@
 #application config
 app:
   path: ${APP_HOME}
-
+  name: xpack
 spring:
   config:
     import: optional:classpath:/config/${env:dev}/application.yaml
