--- a/tiklab-xpack-starter/pom.xml
+++ b/tiklab-xpack-starter/pom.xml
@@ -391,7 +391,7 @@
             </plugin>
 
             <!--copy插件-->
-            <plugin>
+          <!--  <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
                 <version>2.8</version>
@@ -414,7 +414,7 @@
                     <includeTypes>jar</includeTypes>
                     <outputDirectory>${project.basedir}/plugin</outputDirectory>
                 </configuration>
-            </plugin>
+            </plugin>-->
         </plugins>
     </build>
 
