静态文件修改

--- a/tiklab-xpack-starter/src/main/resources/application.yaml
+++ b/tiklab-xpack-starter/src/main/resources/application.yaml
@@ -1,7 +1,7 @@
 #application config
 app:
   path: ${APP_HOME}
-  name: xpack
+  name: tiklab-xpack
 spring:
   config:
     import: optional:classpath:/config/${env:dev}/application.yaml
@@ -14,41 +14,20 @@ server:
 #dal config for mysql jdbc
 jdbc:
   driverClassName: org.postgresql.Driver
-  url: jdbc:postgresql://172.13.1.13:5432/tiklab_xpack?stringtype=unspecified
+  url: jdbc:postgresql://localhost:5432/xpack?stringtype=unspecified
   username: postgres
   password: darth2020
 
 
 postgresql:
   embbed:
-    enable: false
-  database: tiklab_xpack
-
-
-DATA_HOME: ${user.home}/tiklab/${app.name}
-
-#dfs config
-#dfs.server.enabled=false
-dfs:
-  client:
-    url: 101.132.162.74:4000
-    bucket: ${app.name}
-
-#dcs server config
-
-dcs:
-  client:
-    url: 101.132.162.74:5000
-    bucket: ${app.name}
-
-#dss config
-#dss.server.enabled=false
-
-dss:
-  client:
-    url: 101.132.162.74:6000
-    bucket: ${app.name}
-
+    enable: true
+  database: xpack
+  db:
+    port: 5432
+    username: postgres
+    password: darth2020
+    address: ${DATA_HOME}/postgresql
 
 #eas config
 eas:
@@ -56,7 +35,42 @@ eas:
     enable: false
   address: http://e.eas.tiklab.net
 
+DATA_HOME: /opt/tiklab/xpack
 
+#dfs config
+dfs:
+  server:
+    enabled: false
+    mode: server
+    port: 4000
+    datapath: ${DATA_HOME}/files
+  client:
+    url: 127.0.0.1:4000
+    bucket: ${app.name}
+
+#dcs config
+dcs:
+  server:
+    enabled: false
+    mode: server
+    port: 5000
+    datapath: ${DATA_HOME}/caches
+  client:
+    url: 127.0.0.1:5000
+    bucket: ${app.name}
+
+#dcs config
+dss:
+  server:
+    enabled: false
+    mode: server
+    port: 6000
+    datapath: ${DATA_HOME}/index
+  client:
+    url: 127.0.0.1:6000
+    bucket: ${app.name}
+
+datapath: ${DATA_HOME}/caches
 
 
 #plugin config
@@ -75,6 +89,5 @@ file:
   path: http://file.tiklab.net
 
 repository:
-  library: ${user.home}
-  code: xpack
-  address: ""
+  address: ${DATA_HOME}/repository
+
