--- a/tiklab-xpack-starter/pom.xml
+++ b/tiklab-xpack-starter/pom.xml
@@ -77,6 +77,11 @@
             <artifactId>tiklab-postgresql-starter</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.tiklab</groupId>
+            <artifactId>tiklab-user-spring-boot-starter</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <profiles>
