--- a/tiklab-xpack-starter/src/main/resources/config/demo/application.yaml
+++ b/tiklab-xpack-starter/src/main/resources/config/demo/application.yaml
@@ -1,6 +1,6 @@
 #application config
 app:
-  name: xpack
+  name: tiklab-xpack
   path: ${APP_HOME}
 spring:
   profiles:
@@ -19,35 +19,54 @@ jdbc:
   username: postgres
   password: darth2020
 
-DATA_HOME: ${user.home}/tiklab/${app.name}
+postgresql:
+  embbed:
+    enable: false
+  database: tiklab_xpack
 
 eas:
   embbed:
     enable: false
   address: http://eas-ce.demo.tiklab.net
 
+
+DATA_HOME: /opt/tiklab/xpack
+
 base:
   url: http://eas-ce.demo.tiklab.net
+
 #dfs config
-#dfs.server.enabled=false
 dfs:
+  server:
+    enabled: false
+    mode: server
+    port: 4000
+    datapath: ${DATA_HOME}/files
   client:
-    url: 172.11.1.17:4000
+    url: 127.0.0.1:4000
     bucket: ${app.name}
 
-#dcs server config
-
+#dcs config
 dcs:
+  server:
+    enabled: false
+    port: 5020
+    datapath: ${DATA_HOME}/caches
   client:
-    url: 172.11.1.17:5000
-    bucket: ${app.name}
+    url: 127.0.0.1:5020
+    group: g1
+    database: dcs1
+    expire: 7200
 
-#dss config
-#dss.server.enabled=false
-
+#dcs config
 dss:
+  server:
+    enabled: false
+    mode: server
+    port: 6000
+    datapath: ${DATA_HOME}/index
   client:
-    url: 172.11.1.17:6000
+    url: 127.0.0.1:6000
     bucket: ${app.name}
 
 #plugin config
@@ -61,21 +80,9 @@ homes:
 licences:
   path: ${DATA_HOME}/data/dfs/default
 
-db:
-  path: 127.0.0.1:3306
-  shell:
-    path: ${APP_HOME}/script/create_db_local_02.sh
-
-
-template:
-  shell:
-    path: ${APP_HOME}/script/create_db_local_02.sh
-
 #file
 file:
   path: http://file.dev.tiklab.net
 
 repository:
-  library: ${user.home}
-  code: xpack
-  address: "http://xpack-ce.demo.tiklab.net"
+  address: ${DATA_HOME}/repository
