--- a/tiklab-xpack-api/pom.xml
+++ b/tiklab-xpack-api/pom.xml
@@ -7,27 +7,27 @@
     <parent>
         <groupId>io.tiklab</groupId>
         <artifactId>tiklab-xpack</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0.3</version>
     </parent>
     <artifactId>tiklab-xpack-api</artifactId>
     <name>${project.artifactId}</name>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0.3</version>
 
     <dependencies>
         <dependency>
             <groupId>io.tiklab</groupId>
             <artifactId>tiklab-core</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>${tiklab-core.version}</version>
         </dependency>
         <dependency>
             <groupId>io.tiklab</groupId>
             <artifactId>tiklab-postin-annotation</artifactId>
-            <version>${project.version}</version>
+            <version>${tiklab-postin.version}</version>
         </dependency>
         <dependency>
             <groupId>io.tiklab</groupId>
             <artifactId>tiklab-user-api</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>${tiklab-user.version}</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
