--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
         <tiklab-postin.version>1.0.0.3</tiklab-postin.version>
         <tiklab-upgrade.version>1.0.0.3</tiklab-upgrade.version>
         <tiklab-postgresql.version>1.0.0.3</tiklab-postgresql.version>
-
+        <tiklab-jdk.version>1.0.0.3</tiklab-jdk.version>
         <!--other-->
         <jdbc-mapper.version>1.2.2</jdbc-mapper.version>
         <commons-net.version>3.5</commons-net.version>
