--- a/tiklab-xpack-starter/src/main/resources/config/dev/application.yaml
+++ b/tiklab-xpack-starter/src/main/resources/config/dev/application.yaml
@@ -15,8 +15,8 @@ server:
 #dal config for mysql jdbc
 jdbc:
   driverClassName: org.postgresql.Driver
-  url: jdbc:postgresql://172.13.1.24:5432/xpack_ee?currentSchema=public&stringtype=unspecified
-  #url: jdbc:postgresql://172.10.1.10:5432/tiklab_xpack?currentSchema=public&stringtype=unspecified
+  #url: jdbc:postgresql://172.13.1.24:5432/xpack_ee?currentSchema=public&stringtype=unspecified
+  url: jdbc:postgresql://172.10.1.10:5432/tiklab_xpack?currentSchema=public&stringtype=unspecified
   username: postgres
   password: darth2020
 
@@ -58,7 +58,7 @@ dcs:
     url: 127.0.0.1:5001
     group: g1
     database: dcs1
-    expire: 600
+    expire: 6000
 
 #dcs config
 dss:
