--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <artifactId>tiklab-xpack</artifactId>
     <packaging>pom</packaging>
     <name>${project.artifactId}</name>
-    <version>1.0.0.3</version>
+    <version>1.0.0-SNAPSHOT</version>
 
     <modules>
         <module>tiklab-xpack-api</module>
@@ -58,16 +58,8 @@
 
     <dependencyManagement>
         <dependencies>
-            <dependency>
-                <groupId>io.tiklab</groupId>
-                <artifactId>tiklab-dfs-api</artifactId>
-                <version>1.0.0.3</version>
-            </dependency>
-            <dependency>
-                <groupId>io.tiklab</groupId>
-                <artifactId>tiklab-dss-spring-boot-starter</artifactId>
-                <version>${project.version}</version>
-            </dependency>
+
+
         </dependencies>
     </dependencyManagement>
 
