--- a/tiklab-xpack-starter/pom.xml
+++ b/tiklab-xpack-starter/pom.xml
@@ -7,11 +7,11 @@
     <parent>
         <groupId>io.tiklab</groupId>
         <artifactId>tiklab-xpack</artifactId>
-        <version>1.0.0.3</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
     <artifactId>tiklab-xpack-starter</artifactId>
     <name>${project.artifactId}</name>
-    <version>1.0.0.3</version>
+    <version>1.0.0-SNAPSHOT</version>
 
     <dependencies>
         <!--common-->
@@ -78,7 +78,11 @@
             <artifactId>tiklab-user-spring-boot-starter</artifactId>
             <version>${tiklab-user.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>io.tiklab</groupId>
+            <artifactId>tiklab-dss-spring-boot-starter</artifactId>
+            <version>${tiklab-dss.version}</version>
+        </dependency>
 
         <!--other-->
         <dependency>
