--- a/tiklab-xpack-starter/pom.xml
+++ b/tiklab-xpack-starter/pom.xml
@@ -7,11 +7,11 @@
     <parent>
         <groupId>io.tiklab</groupId>
         <artifactId>tiklab-xpack</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
     <artifactId>tiklab-xpack-starter</artifactId>
     <name>${project.artifactId}</name>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
 
     <dependencies>
         <!--common-->
