--- a/tiklab-xpack-starter/src/main/resources/config/prd/application.yaml
+++ b/tiklab-xpack-starter/src/main/resources/config/prd/application.yaml
@@ -94,10 +94,13 @@ repository:
 backup:
   address: /opt/tiklab/xpack-backup
   time: 0 0 2 * * ?
+  valid:
+    time: 168
 
 backups:
   dir: ${user.home}/tiklab/xcode-backups
   time: 0 0 2 * * ?
+
 
 openscan_mvn:
   repo: http://172.13.1.24:8080/repository/maven-public
