--- a/tiklab-xpack-starter/src/main/resources/config/demo/application.yaml
+++ b/tiklab-xpack-starter/src/main/resources/config/demo/application.yaml
@@ -93,14 +93,11 @@ repository:
   address: ${DATA_HOME}/repository
 
 
-backup:
-  address: /opt/tiklab/xpack-backup
-  time: 0 0 2 * * ?
-  valid:
-    time: 168
 backups:
-  dir: /data/xcode
   time: 0 0 2 * * ?
+  dir: /data
+  xpack:
+    dir: ${DATA_HOME}/repository
 
 
 openscan_mvn:
