--- a/tiklab-xpack-starter/src/main/resources/config/test/application.yaml
+++ b/tiklab-xpack-starter/src/main/resources/config/test/application.yaml
@@ -92,16 +92,11 @@ file:
 repository:
   address: ${DATA_HOME}/repository
 
-backup:
-  address: /opt/tiklab/xpack-backup
-  time: 0 0 2 * * ?
-  valid:
-    time: 168
-
-
 backups:
-  dir: /data/xcode
   time: 0 0 2 * * ?
+  dir: /data
+  xpack:
+    dir: ${DATA_HOME}/repository
 
 openscan_mvn:
   repo: http://172.13.1.24:8080/repository/maven-public
