--- a/tiklab-xpack-starter/src/main/resources/config/prd/application.yaml
+++ b/tiklab-xpack-starter/src/main/resources/config/prd/application.yaml
@@ -91,15 +91,12 @@ file:
 repository:
   address: ${DATA_HOME}/repository
 
-backup:
-  address: /opt/tiklab/xpack-backup
-  time: 0 0 2 * * ?
-  valid:
-    time: 168
 
 backups:
-  dir: ${user.home}/tiklab/xcode-backups
   time: 0 0 2 * * ?
+  dir: /data
+  xpack:
+    dir: ${DATA_HOME}/repository
 
 
 openscan_mvn:
