--- a/thoughtware-hadess-starter/pom.xml
+++ b/thoughtware-hadess-starter/pom.xml
@@ -426,9 +426,9 @@
                         <id>make-assembly</id>
                         <configuration>
                             <descriptors>
-                                <descriptor>assembly/distribution-${assembly}.xml</descriptor>
+                                <descriptor>assembly/distribution.xml</descriptor>
                             </descriptors>
-                            <finalName>thoughtware-hadess-${version}-${timestamp}</finalName>
+                            <finalName>thoughtware-hadess-1.0.0</finalName>
                             <appendAssemblyId>false</appendAssemblyId>
                         </configuration>
                         <phase>package</phase>
