--- a/thoughtware-hadess-starter/src/main/resources/config/prd/application.yaml
+++ b/thoughtware-hadess-starter/src/main/resources/config/prd/application.yaml
@@ -2,6 +2,7 @@
 app:
   path: ${APP_HOME}
   name: thoughtware-hadess
+  version: ce
 spring:
   config:
     import: optional:classpath:/config/${env:dev}/application.yaml
