--- a/thoughtware-hadess-starter/src/main/resources/config/prd/application.yaml
+++ b/thoughtware-hadess-starter/src/main/resources/config/prd/application.yaml
@@ -20,7 +20,7 @@ jdbc:
   password: darth2020
 
 base:
-  url: http://e.hadess.thoughtware.cn
+  url: http://e.hadess.tiklab.net
 
 postgresql:
   embbed:
